--- a/livedatatest/src/main/res/layout/activity_main.xml
+++ b/livedatatest/src/main/res/layout/activity_main.xml
@@ -7,18 +7,37 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.235" />
 
-    <Button
-        android:text="Button"
+    <ImageButton
+        android:id="@+id/ibLike"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/button" />
+        android:contentDescription="@string/todo"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/ibDislike"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_favorite_30dp" />
+
+    <ImageButton
+        android:id="@+id/ibDislike"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/todo"
+        app:layout_constraintBottom_toBottomOf="@id/ibLike"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/ibLike"
+        app:layout_constraintTop_toTopOf="@id/ibLike"
+        app:srcCompat="@drawable/ic_favorite_border_30dp" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
