--- a/databindingtest/src/main/res/layout/activity_main.xml
+++ b/databindingtest/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="result"
-            type="com.yyz.databindingtest.LiveDataViewModel" />
+            type="com.yyz.databindingtest.DataBindingViewModel" />
 
     </data>
 
@@ -20,12 +20,13 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{String.valueOf(result.favoriteNum.intValue())}"
+            android:text="@{String.valueOf(result.favoriteNum)}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.235" />
+            app:layout_constraintVertical_bias="0.235"
+            tools:text="this is result " />
 
         <ImageButton
             android:id="@+id/ibLike"
@@ -43,13 +44,13 @@
             android:id="@+id/ibDislike"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/ic_favorite_border_30dp"
             android:contentDescription="@string/todo"
             android:onClick="@{()->result.addFavoriteNum(-1)}"
             app:layout_constraintBottom_toBottomOf="@id/ibLike"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/ibLike"
-            app:layout_constraintTop_toTopOf="@id/ibLike"
-            android:background="@drawable/ic_favorite_border_30dp" />
+            app:layout_constraintTop_toTopOf="@id/ibLike" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
