--- a/demo_navigation/src/main/res/navigation/my_nav_graph.xml
+++ b/demo_navigation/src/main/res/navigation/my_nav_graph.xml
@@ -8,8 +8,8 @@
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.yyz.demo_navigation.HomeFragment"
-        android:label="fragment_home"
-        tools:layout="@layout/fragment_home" >
+        android:label="Home"
+        tools:layout="@layout/fragment_home">
         <action
             android:id="@+id/action_homeFragment_to_detailFragment"
             app:destination="@id/detailFragment"
@@ -19,8 +19,8 @@
     <fragment
         android:id="@+id/detailFragment"
         android:name="com.yyz.demo_navigation.DetailFragment"
-        android:label="fragment_detail"
-        tools:layout="@layout/fragment_detail" >
+        android:label="Detail"
+        tools:layout="@layout/fragment_detail">
         <action
             android:id="@+id/action_detailFragment_to_homeFragment"
             app:destination="@id/homeFragment"
