--- a/demo_navigation/src/main/res/layout/fragment_home.xml
+++ b/demo_navigation/src/main/res/layout/fragment_home.xml
@@ -16,6 +16,18 @@
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.5" />
 
+        <EditText
+            android:id="@+id/etContent"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:hint="@string/hint_args"
+            android:importantForAutofill="no"
+            android:inputType="text"
+            app:layout_constraintBottom_toTopOf="@id/textView2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
